# python-simulations

./: LICENSE  README.md  pyproject.toml
simulations/aerodynamics/: aerodynamics_running.py
simulations/cellular_mechanics/: calabi_yau.py  cellular_fuzzy.py  fuzzy_cellular_v01.py  hodgkin_huxley.py  hodgkin_huxley_data_analysis.py  hodgkin_huxley_model.py  leon_chua_laplacian.py  leon_chua_laplacian_2d_specific_image.py  leon_chua_laplacian_image.py
simulations/earth_simulation/: earth_layers.py  earth_orbit.py  earth_orbit_solar_winds.py  earth_rotation.py
simulations/fluid_mechanics/: fluid_dynamics.py  fluid_dynamics_contionous.py  fluid_dynamicsv2.py  fluid_dynamicsv3.py  liquid_warming_up.py  navier_stokes.py
simulations/quantum_simulations/: acoustic_levitation.py  boltzmann_w_hebbian.py  brane_world.py  chaos.py  holographic_visualised.py  m_theory.py  particles.py  particles_sim_with_merge.py  quantum_harmonics.py  string_theory.py  string_theory_landscape.py  wave_duality.py
simulations/rocket_simulations/: descent_simulation.py  raptor_burn_sim.py  rocket_fin_control.py
simulations/simple_simulations/: atom_decay.py  magnetic_field_vis.py  movable_magnets.py
simulations/space_mechanics/: big_bang_particles.py  gravitational_waves.py  moon_earth_motion.py  planet_2d_orbit.py  spacetime.py  starship_descent,py  sun_movement_3d.py  sun_movement_3d_trails.py  sun_movement_with_years.py  sun_movement_with_years_and_distance.py
