[tool.poetry]
name = "python-simulations"
version = "0.1.0"
description = "A repo for simulations"
authors = ["csehg <csehgabor451@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
networkx = "^3.4.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
